--- a/Support/index.html
+++ b/Support/index.html
@@ -2,11 +2,10 @@
 
 <html>
 
-<!-- Mirrored from localhost:44324/Support by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Apr 2020 11:50:19 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
-    <title>Giftsery - Support</title>
-    <link rel="shortcut icon" type="image/png" sizes="72x72" href="images/favicon.png">
+    <title>Giftsery - A convenient way to gift</title>
+    <link rel="shortcut icon" type="image/png" href="images/logo.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Download Giftsery and browse through our unique & thoughtful gifting ideas and have the item delivered to your loved one conveniently. Also, save anniversaries.">
@@ -15,7 +14,7 @@
     <!-- Social meta -->
     <meta property="og:title" content="Giftsery - Gifting made easy" />
     <meta property="og:url" content="https://www.giftsery.com/" />
-    <meta property="og:image" content="../www.giftsery.com/images/playstore.png" />
+    <meta property="og:image" content="www.giftsery.com/images/playstore.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
