--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <title>Giftsery - A convenient way to gift</title>
-    <link rel="shortcut icon" type="image/png" sizes="72x72" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="images/logo.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Download Giftsery and browse through our unique & thoughtful gifting ideas and have the item delivered to your loved one conveniently. Also, save anniversaries.">
