--- a/Android/index.html
+++ b/Android/index.html
@@ -3,8 +3,7 @@
 
 <html>
 
-<!-- Mirrored from localhost:44324/Android by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Apr 2020 11:50:19 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Android</title>
@@ -13,5 +12,4 @@
 
 </body>
 
-<!-- Mirrored from localhost:44324/Android by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Apr 2020 11:50:19 GMT -->
 </html>
