--- a/Privacy/index.html
+++ b/Privacy/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <title>Giftsery - A convenient way to gift</title>
-    <link rel="shortcut icon" type="image/png" href="images/logo.png">
+    <link rel="shortcut icon" type="image/png" href="../images/logo.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Download Giftsery and browse through our unique & thoughtful gifting ideas and have the item delivered to your loved one conveniently. Also, save anniversaries.">
@@ -20,8 +20,8 @@
     <meta property="og:image:height" content="512" />
     <meta property="og:description" content="Download Giftsery and browse through our unique & thoughtful gifting ideas and have the item delivered to your loved one conveniently. Also, save anniversaries." />
 
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
     <!-- Wrapper -->
@@ -164,15 +164,14 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.scrollex.min.js"></script>
+    <script src="../assets/js/jquery.scrolly.min.js"></script>
+    <script src="../assets/js/browser.min.js"></script>
+    <script src="../assets/js/breakpoints.min.js"></script>
+    <script src="../assets/js/util.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 
-<!-- Mirrored from localhost:44324/Privacy by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Apr 2020 11:50:19 GMT -->
 </html>
