--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li><a target="_blank" href="https://www.linkedin.com/company/giftsery/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                     <li><a href="mailto:support@giftsery.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
                 </ul>
-                <p>&copy; 2020 - Giftsery Inc. - <a href="#">Home</a> - <a href="Privacy">Privacy Policy</a> - <a href="Support">Support</a></p>
+                <p>&copy; 2020 - Giftsery Inc. - <a href="#">Home</a> - <a href="/Privacy">Privacy Policy</a> - <a href="/Support">Support</a></p>
             </div>
         </footer>
 
